[fix] #209 - apiIssue관련 정리 네이밍 관련 정리
nickname → username
score → userscore
(프로필이미지) imgUrl → profileImg
rank → userRank